objects/ssot__StnryAssetWaterFootprint__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmployeeCount__c</fullName>
        <label>Employee Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__FootprintStageName__c</fullName>
        <label>Footprint Stage</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Stationary Asset Water Footprint Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OccupiedFloorAreaNumber__c</fullName>
        <label>Occupied Floor Area</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OccupiedFloorAreaUnitId__c</fullName>
        <label>Occupied Floor Area Unit</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PreviousYearWaterFtprntId__c</fullName>
        <label>Previous Year Water Footprint</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReportingYear__c</fullName>
        <label>Reporting Year</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__StnryAssetEnvrSrcId__c</fullName>
        <label>Stationary Asset Environmental Source</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TotalFloorAreaNumber__c</fullName>
        <label>Total Floor Area</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalFloorAreaUnitId__c</fullName>
        <label>Total Floor Area Unit</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TotalStorageInMlNumber__c</fullName>
        <label>Total Storage (Ml)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalUnitsManufacturedNumber__c</fullName>
        <label>Total Units Manufactured</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747383817664_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>StnryAssetWaterFootprint_OccupiedFlo_rel</label>
        <referenceTo>ssot__UnitOfMeasure__dlm</referenceTo>
        <relationshipLabel>StnryAssetWaterFootprint_OccupiedFlo_rel</relationshipLabel>
        <relationshipName>rel_1747383817664_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747383874415_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>StnryAssetWaterFootprint_PreviousYea_rel</label>
        <referenceTo>ssot__StnryAssetWaterFootprint__dlm</referenceTo>
        <relationshipLabel>StnryAssetWaterFootprint_PreviousYea_rel</relationshipLabel>
        <relationshipName>rel_1747383874415_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747383886527_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>StnryAssetWaterFootprint_StnryAssetE_rel</label>
        <referenceTo>ssot__StationaryAssetEnvSource__dlm</referenceTo>
        <relationshipLabel>StnryAssetWaterFootprint_StnryAssetE_rel</relationshipLabel>
        <relationshipName>rel_1747383886527_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>